--- a/editProduct.html
+++ b/editProduct.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BMX Product Catalog - Edit Product</title>
+    <!-- Google Fonts & FontAwesome -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>BMX Katalog produktow - edytuj produkty</title>
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
 </head>
 
 <body>
-    <header>
-        <h1>BMX Product Catalog</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Strona główna</a></li>
-            </ul>
-        </nav>
+    <header class="main-header" role="banner">
+        <div class="container header-flex">
+            <h1 tabindex="0">BMX Product Catalog</h1>
+            <nav aria-label="Main navigation">
+                <ul class="nav-list">
+                    <li><a href="index.html"><i class="fa fa-home"></i><span>home</span></a></li>
+                    <li><a href="products.html"><i class="fa fa-bicycle"></i><span>products</span></a></li>
+                    <li><a href="addProduct.html"><i class="fa fa-plus"></i><span>add product</span></a></li>
+                    <li><a href="editProduct.html" aria-current="page"><i class="fa fa-edit"></i><span>edit product</span></a>
+                    </li>
+                    <li><a href="login.html"><i class="fa fa-user"></i><span>log in</span></a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <section id="editProduct">
-        <h2>Edytuj produkt</h2>
+    <main>
+        <section id="editProduct">
+            <h2>Edit Product</h2>
+            <form>
+                <label for="editProductName">Product name:</label>
+                <input type="text" id="editProductName" name="editProductName" required>
+                <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Save changes</button>
+                <div class="button-container">
+                    <button type="button" id="editButton" class="btn btn-secondary"><i class="fa fa-edit"></i> Edit
+                    </button>
+                    <button type="button" id="deleteButton" class="btn btn-secondary"><i class="fa fa-trash"></i>
+                        Delete</button>
+                </div>
+            </form>
+        </section>
+    </main>
 
-        <form>
-            <label for="editProductName">Nazwa produktu:</label>
-            <input type="text" id="editProductName" name="editProductName" required>
-
-            <button type="submit">Zapisz zmiany</button>
-
-   
-            <div class="button-container">
-                <button id="editButton" onclick="editProduct()">Edytuj</button>
-                <button id="deleteButton" onclick="deleteProduct()">Usuń</button>
-            </div>
-        </form>
-    </section>
-
+    <footer id="footer" role="contentinfo">
+        <div class="container">
+            <p>Adrian Lesniak student ID: 154256 &copy; <span id="year"></span></p>
+        </div>
+    </footer>
     <script>
-        console.log('JavaScript is running!');
-
-        function editProduct() 
-		{
-            alert('Edytuj produkt');
-        }
-
-        function deleteProduct() 
-		{
-            alert('Usuń produkt');
-        }
+        document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
 
